@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 1;
+use Test::More;
 
 use B::Hooks::EndOfScope;
 
@@ -16,3 +16,5 @@ sub foo {
 BEGIN {
     ok($called, 'callback invoked');
 }
+
+done_testing;
